--- a/javascript/passenger_counter/index.css
+++ b/javascript/passenger_counter/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://www.coloradolifemagazine.com/pub/media/blog/cache/860x620/magefan_blog/CC-141028_Hardin_DSC4983-Straight.jpg");
+    background-image: url("https://galeriemagazine.com/wp-content/uploads/2018/05/liegeguilleminsSelec.jpg");
     background-size: cover;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
