--- a/javascript/passenger_counter/index.css
+++ b/javascript/passenger_counter/index.css
@@ -1,13 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Sofia+Sans+Condensed:ital,wght@1,500&display=swap');
+
 body {
-    background-image: url("https://galeriemagazine.com/wp-content/uploads/2018/05/liegeguilleminsSelec.jpg");
+    background-image: url("https://s3.amazonaws.com/thisistoday-webassets/siteMedia/Devotion-Images/2019-10/workout.jpg");
     background-size: cover;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
+    font-family: 'Bebas Neue', sans-serif;
+    color: whitesmoke;
     text-align: center;
+    height: 100vh;
+}
+
+div {
+    max-width: 600px;
+    margin: auto;
 }
 
 h1 {
-    margin-top: 10px;
+    margin-top: 25px;
     margin-bottom: 10px;
 }
 
@@ -22,10 +31,16 @@ button {
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
-    font-weight: bold;
-    width: 200px;
+    font-family: 'Sofia Sans Condensed', sans-serif;
+    font-size: 18px;
+    width: 125px;
     margin-bottom: 5px;
+    margin-left: 25px;
     border-radius: 5px;
+}
+
+p {
+    font-size: 20px;
 }
 
 #increment-btn {
