--- a/javascript/lead_tracker/styles.css
+++ b/javascript/lead_tracker/styles.css
@@ -20,3 +20,17 @@ button {
     background-color: #5f9341;
     border: none;
 }
+
+ul {
+    list-style: none;
+    margin-top: 20px;
+    padding-left: 0;
+}
+
+li {
+    margin-top: 5px;
+}
+
+li a {
+    color: #5f9341;
+}
